Cyberduck
https://cyberduck.io/

7.10.1
- [Bugfix] Unable to access team drive set as default path in bookmark (Google Drive)
- [Bugfix] Login failure with file transfers using multiple connectios (FTP)

7.10.0
- [Feature] Preference to set default storage class (Google Storage) (#11521)
- [Feature] Preference to set default bucket region (Google Storage)
- [Feature] Preference to set predefined set of grantees and permissions for new files (S3, Google Storage)
- [Feature] Support to set predefined ACL bucket-owner-full-control (S3, Google Storage) (#11697)
- [Feature] Context menu in browser table header to select columns (macOS) (#11718)
- [Feature] Allow selection of region when creating new bucket for third party S3 providers
- [Bugfix] Recursive search yields no results (#11424)
- [Bugfix] Canceled upload to a vault can result in an undeletable folder (Cryptomator) (#11696)
- [Bugfix] Updated .NET Framework Installer (Windows)

7.9.2
- [Bugfix] Failure opening application with previous application support directory symbolic link (macOS)

7.9.1
- [Bugfix] Slow synchronisation of a large folder (#11676)
- [Bugfix] Slow tranfer when using "compare" option for existing files (#11679)
- [Bugfix] Downloads fail with error "The specified key does not exist" (S3) (#11670)

7.9.0
- [Feature] New Big Sur style application icon (macOS)
- [Feature] New "Auto" default option for number of connections for transfers
- [Feature] Increased default to 5 concurrent connections for transfers for protocols other than FTP
- [Feature] Allow toggling versioning configuration for bucket (Google Storage)
- [Feature] Display and restore of previous file versions in bucket (Google Storage)
- [Feature] Support chacha20-poly1305@openssh.com cipher (SFTP) (#8554)
- [Feature] Share file option to set public-read ACL on file and copy URL (S3, Google Storage)
- [Feature] Tremendously faster uploading folders with many files to vault (Cryptomator, OneDrive, Google Drive, Backblaze B2) (#10849)