@@ -61,8 +61,22 @@
     <a target="_blank" href="https://trac.cyberduck.io/milestone/7.10.1"><strong>Version 7.10.1</strong></a>
 </p>
 <ul>
-    <li><span class="label label-warning">Bugfix</span> Unable to access team drive set as default path in bookmark (Google Drive)</li>
-    <li><span class="label label-warning">Bugfix</span> Login failure with file transfers using multiple connectios (FTP)</li>
+    <li><span class="label label-success">Feature</span> Updated support for Files.com using proprietary REST API
+        (Files.com)
+    </li>
+    <li><span class="label label-success">Feature</span> Allow override of protocol specific settings in connection
+        profiles
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Unable to access team drive set as default path in bookmark
+        (Google Drive)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Login failure with file transfers using multiple connections
+        (FTP)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Downloads from HTTP server with no WebDAV extension support
+        (CLI) (<a
+            target="_blank" href="https://trac.cyberduck.io/ticket/11727">#11727</a>)
+    </li>
 </ul>
 
 <p>
