@@ -2,8 +2,11 @@ Cyberduck
 https://cyberduck.io/
 
 7.10.1
+- [Feature] Updated support for Files.com using proprietary REST API (Files.com)
+- [Feature] Allow override of protocol specific settings in connection profiles
 - [Bugfix] Unable to access team drive set as default path in bookmark (Google Drive)
-- [Bugfix] Login failure with file transfers using multiple connectios (FTP)
+- [Bugfix] Login failure with file transfers using multiple connections (FTP)
+- [Bugfix] Downloads from HTTP server with no WebDAV extension support (CLI) (#11727)
 
 7.10.0
 - [Feature] Preference to set default storage class (Google Storage) (#11521)
